# kalibr

Schweizer-Messer/numpy_eigen/: CMakeLists.txt
Schweizer-Messer/python_module/: CMakeLists.txt
Schweizer-Messer/sm_boost/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_boost/src/: portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
Schweizer-Messer/sm_common/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_eigen/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_eigen/src/: random.cpp
Schweizer-Messer/sm_kinematics/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_logging/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_opencv/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_property_tree/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_python/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_random/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_timing/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_backend/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_backend_python/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_error_terms/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_python/: CMakeLists.txt  package.xml
aslam_cv/aslam_cv_serialization/: CMakeLists.txt  package.xml
aslam_cv/aslam_imgproc/: CMakeLists.txt  package.xml
aslam_cv/aslam_time/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration_python/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/aslam_splines/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/aslam_splines_python/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/bsplines/: CMakeLists.txt  package.xml
aslam_nonparametric_estimation/bsplines_python/: CMakeLists.txt  package.xml
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt  package.xml
aslam_offline_calibration/kalibr/: CMakeLists.txt  package.xml
aslam_optimizer/aslam_backend/: CMakeLists.txt  package.xml
aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt  package.xml
aslam_optimizer/aslam_backend_python/: CMakeLists.txt  package.xml
aslam_optimizer/sparse_block_matrix/: CMakeLists.txt  package.xml
catkin_simple/: CMakeLists.txt  README.md  package.xml
catkin_simple/cmake/: catkin_simple-extras.cmake.em
catkin_simple/test/scenarios/hello_world/bar/: package.xml
catkin_simple/test/scenarios/hello_world/baz/: package.xml
catkin_simple/test/scenarios/hello_world/foo/: package.xml
opencv2_catkin/: CMakeLists.txt  package.xml
