<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catkin_simple</name>
  <version>0.1.0</version>
  <description>catkin, simpler</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>
  <exec_depend>catkin</exec_depend>

</package>