<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv2_catkin</name>
  <version>0.0.1</version> 
  <description>opencv2_catkin</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
</package>
