<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_eigen</name>
  <version>0.0.1</version>
  <description>sm_eigen</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <build_depend>eigen</build_depend>
  <depend>sm_common</depend>
  <depend>sm_random</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
