<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_opencv</name>
  <version>0.0.1</version>
  <description>sm_opencv</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>
  <build_depend>sm_common</build_depend>

  <exec_depend>sm_common</exec_depend>
</package>
