<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>kalibr</name>
  <version>0.0.1</version>
  <description>kalibr</description>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>

  <build_depend>aslam_cv_python</build_depend>
  <build_depend>aslam_backend</build_depend>
  <build_depend>aslam_backend_expressions</build_depend>
  <build_depend>aslam_backend_python</build_depend>
  <build_depend>incremental_calibration_python</build_depend>
  <build_depend>aslam_cameras_april</build_depend>
  <build_depend>aslam_splines_python</build_depend>
  <build_depend>numpy_eigen</build_depend>
  <build_depend>python_module</build_depend>
  <build_depend>sparse_block_matrix</build_depend>
  <build_depend>sm_python</build_depend>
  <build_depend>aslam_cv_backend_python</build_depend>

  <exec_depend>aslam_cv_backend_python</exec_depend>
  <exec_depend>aslam_backend_python</exec_depend>
  <exec_depend>incremental_calibration_python</exec_depend>
  <exec_depend>aslam_splines_python</exec_depend>

</package>
