<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>aslam_backend</name>
  <version>0.0.1</version>
  <description>aslam_backend</description>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>

  <build_depend>sparse_block_matrix</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sm_random</build_depend>
  <build_depend>sm_timing</build_depend>
  <build_depend>sm_logging</build_depend>
  <build_depend>sm_property_tree</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>tbb</build_depend>

  <exec_depend>sparse_block_matrix</exec_depend>
  <exec_depend>sm_boost</exec_depend>
  <exec_depend>sm_random</exec_depend>
  <exec_depend>sm_timing</exec_depend>
  <exec_depend>sm_logging</exec_depend>
  <exec_depend>sm_property_tree</exec_depend>
  <exec_depend>tbb</exec_depend>
</package>
