<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sparse_block_matrix</name>
  <version>0.0.1</version>
  <description>sparse_block_matrix</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Author</maintainer>
  <license>New BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>

  <build_depend>tbb</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>suitesparse</build_export_depend>

  <exec_depend>sm_common</exec_depend>
  <exec_depend>sm_eigen</exec_depend>
  <exec_depend>suitesparse</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
