<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foo</name>
  <version>0.1.0</version>
  <description>The foo package</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <exec_depend>bar</exec_depend>
  <build_depend>bar</build_depend>
  <exec_depend>baz</exec_depend>
  <build_depend>baz</build_depend>
  <exec_depend>boost</exec_depend>
  <build_depend>boost-dev</build_depend>

</package>